# Identification-and-Evaluation-of-Dynamic-Robot-Models

./: README.txt  Readme.txt~
mir_teleop/ros/config/: teleop.yaml
mir_teleop/ros/launch/: teleop_joypad.launch
models_evaluation/: CMakeLists.txt  CMakeLists.txt~  Readme.txt~  display.launch~  package.xml  youbot1.xacro~
models_evaluation/data/: Readme.txt  Readme.txt~  data.dat~  outparam.dat~  outparam_dyn.dat~  params.dat~  youbot.urdf
models_evaluation/data/inputs/: Readme.txt  Readme.txt~
models_evaluation/data/outputs/: Readme.txt~
models_evaluation/include/models_evaluation/: ModelOptimizer.hpp  gravitycompensation.hpp  (+3 more)
models_evaluation/src/: ModelOptimizer.cpp  gravitycompensation.cpp  main.cpp  models_evaluation.cpp  q.dat~
record_joint_effort/: CMakeLists.txt  package.xml
record_joint_effort/src/: main.cpp
youbot_moveit_config/: .setup_assistant  CMakeLists.txt  Readme.txt  package.xml
youbot_moveit_config/config/: arm.yaml  controllers.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml~  ompl_planning.yaml  ompl_planning.yaml~  youbot.srdf
youbot_moveit_config/data/: youbot.urdf.xacro
youbot_moveit_config/launch/: default_warehouse_db.launch~  demo.launch  demo.launch~  move_group.launch~  planning_context.launch  robot.launch  trajectory_execution.launch.xml  youbot-brsu-1.launch  youbot_moveit_config.launch~  youbot_moveit_controller_manager.launch.xml  youbot_oodl_driver.launch
youbot_moveit_config/scripts/: movegroup.py  movegroup.py~
youbot_moveit_config/src/: youbot_moveit_config.cpp  youbot_moveit_config_sim.cpp
(+14 files in other folders)
